[gd_scene load_steps=11 format=3 uid="uid://8ogvg73x20dk"]

[ext_resource type="Script" path="res://Scripts/spider.gd" id="1_dy1lu"]
[ext_resource type="PackedScene" uid="uid://caip1e64g7adg" path="res://inverse_kinematics/leg_animator.tscn" id="2_js6dq"]
[ext_resource type="Material" path="res://resources/yellow.tres" id="3_a0k62"]
[ext_resource type="Material" path="res://resources/red.tres" id="4_k0k44"]
[ext_resource type="PackedScene" uid="uid://c34hc8o0nlbf0" path="res://Full_Assets/character_health_bar.tscn" id="5_1plew"]

[sub_resource type="BoxMesh" id="1"]
size = Vector3(0.2, 0.2, 1)

[sub_resource type="BoxMesh" id="2"]

[sub_resource type="SphereMesh" id="3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_4gd7k"]
size = Vector3(0.923706, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_iacao"]

[node name="Spider" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.243752, 0.80682, 0.00371265)
script = ExtResource("1_dy1lu")

[node name="spider_controller" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.342878, -0.758254, -0.450703)

[node name="leg_animator1" parent="spider_controller" instance=ExtResource("2_js6dq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.44924, -0.449437)
rest_position_path = NodePath("rest_position")
ray_cast_position_path = NodePath("ray_cast_position")
pole_position_path = NodePath("pole_position")
pole_rotation_path = NodePath("pole_rotation")
root_joint_path = NodePath("joint")
step_interval_ms = 500.0
step_clock_offset_ms = 300.0
step_duration_ms = 200.0

[node name="pole_position" type="Marker3D" parent="spider_controller/leg_animator1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 3, 9.53674e-07)

[node name="pole_rotation" type="Marker3D" parent="spider_controller/leg_animator1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 3.5, 2.38419e-07)

[node name="rest_position" type="Marker3D" parent="spider_controller/leg_animator1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.192, 0, 0)

[node name="ray_cast_position" type="Marker3D" parent="spider_controller/leg_animator1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.15659, 0.75843, 0)

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator1"]
transform = Transform3D(0.00739333, 0.0722536, 0.997167, 0.0507115, 0.995911, -0.0725349, -0.997621, 0.0511601, 0.00370284, 0, 0.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="spider_controller/leg_animator1/joint"]
transform = Transform3D(1, -6.4224e-06, 2.85935e-05, 6.4224e-06, 1, 6.98958e-07, -2.8586e-05, -6.92206e-07, 1, 3.29018e-05, -1.90735e-06, -0.499994)
material_override = ExtResource("3_a0k62")
mesh = SubResource("1")

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator1/joint"]
transform = Transform3D(0.969327, 0.172279, 0.0623062, -0.147547, 0.939042, -0.28156, -0.106909, 0.266031, 0.953507, 0.000630617, -0.000973761, -1.07139)

[node name="MeshInstance3D" type="MeshInstance3D" parent="spider_controller/leg_animator1/joint/joint"]
transform = Transform3D(1, -7.45058e-09, -5.96046e-08, 0, 1, -1.86265e-09, 0, 2.8871e-08, 1, 0, -1.78814e-07, -0.5)
material_override = ExtResource("4_k0k44")
mesh = SubResource("1")

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator1/joint/joint"]
transform = Transform3D(0.998088, 0.0431756, -0.0362722, 0.0434807, -0.178478, 0.981599, 0.0359841, -0.981898, -0.180019, -0.000106096, -3.50475e-05, -1.00181)

[node name="MeshInstance2" type="MeshInstance3D" parent="spider_controller/leg_animator1/joint/joint/joint"]
transform = Transform3D(1, -0.000118151, -7.96393e-05, 0.000118166, 1, -3.14424e-05, 7.96542e-05, 3.15653e-05, 1, -4.1008e-05, -1.5676e-05, -0.5)
material_override = ExtResource("3_a0k62")
mesh = SubResource("1")

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator1/joint/joint/joint"]
transform = Transform3D(0.997601, -0.0251536, 0.0146916, 0.0251126, 0.998785, 0.0011294, -0.0146888, -0.000758692, 0.999721, 6.4373e-05, 0.00185156, -1.01098)

[node name="leg_animator2" parent="spider_controller" instance=ExtResource("2_js6dq")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.44924, -0.449437)
rest_position_path = NodePath("rest_position")
ray_cast_position_path = NodePath("ray_cast_position")
pole_position_path = NodePath("pole_position")
pole_rotation_path = NodePath("pole_rotation")
root_joint_path = NodePath("joint")
step_interval_ms = 500.0
step_clock_offset_ms = 0.0
step_duration_ms = 200.0

[node name="pole_position" type="Marker3D" parent="spider_controller/leg_animator2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 3, 9.53674e-07)

[node name="pole_rotation" type="Marker3D" parent="spider_controller/leg_animator2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 3.5, 2.38419e-07)

[node name="rest_position" type="Marker3D" parent="spider_controller/leg_animator2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.192, 0, 0)

[node name="ray_cast_position" type="Marker3D" parent="spider_controller/leg_animator2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.15659, 0.75843, 0)

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator2"]
transform = Transform3D(0.00739333, 0.0722536, 0.997167, 0.0507115, 0.995911, -0.0725349, -0.997621, 0.0511601, 0.00370284, 0, 0.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="spider_controller/leg_animator2/joint"]
transform = Transform3D(1, -6.42426e-06, 2.85953e-05, 6.42613e-06, 1, 7.10599e-07, -2.85804e-05, -6.9011e-07, 1, 3.24249e-05, -1.78814e-06, -0.499994)
material_override = ExtResource("3_a0k62")
mesh = SubResource("1")

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator2/joint"]
transform = Transform3D(0.978771, -0.0810872, -0.0864266, 0.055086, 0.953728, -0.266788, 0.103757, 0.258572, 0.956926, 0.000721693, -0.00120556, -1.07127)

[node name="MeshInstance3D" type="MeshInstance3D" parent="spider_controller/leg_animator2/joint/joint"]
transform = Transform3D(1, -7.45058e-09, -5.96046e-08, 0, 1, -1.86265e-09, 0, 2.8871e-08, 1, 0, -1.78814e-07, -0.5)
material_override = ExtResource("4_k0k44")
mesh = SubResource("1")

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator2/joint/joint"]
transform = Transform3D(0.995025, 0.0652908, 0.0725619, -0.0967136, 0.5519, 0.826761, 0.0139653, -0.8299, 0.555521, 0.000150919, -2.80142e-05, -1.00115)

[node name="MeshInstance2" type="MeshInstance3D" parent="spider_controller/leg_animator2/joint/joint/joint"]
transform = Transform3D(1, -0.000118151, -7.96393e-05, 0.000118166, 1, -3.14424e-05, 7.96542e-05, 3.15653e-05, 1, -4.1008e-05, -1.5676e-05, -0.5)
material_override = ExtResource("3_a0k62")
mesh = SubResource("1")

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator2/joint/joint/joint"]
transform = Transform3D(0.993779, 0.0119062, -0.00672279, -0.0117552, 0.99879, 0.0134223, 0.00684078, -0.01333, 0.999703, -0.000299931, 0.00198889, -1.01054)

[node name="leg_animator3" parent="spider_controller" instance=ExtResource("2_js6dq")]
transform = Transform3D(1, -2.91038e-10, 0, 1.16415e-10, 1, 0, -1.86265e-09, -1.86265e-09, 1, 0, 0.44924, 0.4)
rest_position_path = NodePath("rest_position")
ray_cast_position_path = NodePath("ray_cast_position")
pole_position_path = NodePath("pole_position")
pole_rotation_path = NodePath("pole_rotation")
root_joint_path = NodePath("joint")
step_interval_ms = 500.0
step_clock_offset_ms = 0.0
step_duration_ms = 200.0

[node name="pole_position" type="Marker3D" parent="spider_controller/leg_animator3"]
transform = Transform3D(1, 3.72529e-09, -1.86265e-09, -3.72529e-09, 1, 0, 0, -1.74623e-10, 1, -2.5, 3, 7.15256e-07)

[node name="pole_rotation" type="Marker3D" parent="spider_controller/leg_animator3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 3.5, 2.38419e-07)

[node name="rest_position" type="Marker3D" parent="spider_controller/leg_animator3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.192, 0, 0)

[node name="ray_cast_position" type="Marker3D" parent="spider_controller/leg_animator3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.15659, 0.75843, 0)

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator3"]
transform = Transform3D(0.00739333, 0.0722536, 0.997167, 0.0507115, 0.995911, -0.0725349, -0.997621, 0.0511601, 0.00370284, 0, 0.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="spider_controller/leg_animator3/joint"]
transform = Transform3D(0.999768, -0.0029909, -0.021316, -0.00600945, 0.912137, -0.409842, 0.0206689, 0.409875, 0.911907, 3.24249e-05, -1.72853e-06, -0.499996)
material_override = ExtResource("3_a0k62")
mesh = SubResource("1")

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator3/joint"]
transform = Transform3D(0.964653, 0.190724, 0.0742351, -0.161867, 0.936184, -0.282676, -0.1233, 0.263141, 0.951881, 0.0162573, 0.228089, -1.00364)

[node name="MeshInstance3D" type="MeshInstance3D" parent="spider_controller/leg_animator3/joint/joint"]
transform = Transform3D(1, -7.45058e-09, -5.96046e-08, 0, 1, -1.86265e-09, 0, 2.8871e-08, 1, 0, -1.78814e-07, -0.5)
material_override = ExtResource("4_k0k44")
mesh = SubResource("1")

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator3/joint/joint"]
transform = Transform3D(0.997527, 0.0501546, -0.0422989, 0.0505622, -0.175583, 0.981821, 0.0419107, -0.981911, -0.177728, -0.000126123, -4.12464e-05, -1.00237)

[node name="MeshInstance2" type="MeshInstance3D" parent="spider_controller/leg_animator3/joint/joint/joint"]
transform = Transform3D(1, -0.000118215, -9.55611e-05, 0.000118215, 1, -3.79132e-05, 7.96318e-05, 3.15518e-05, 1.2, 0.0122542, -0.0291796, -0.666716)
material_override = ExtResource("3_a0k62")
mesh = SubResource("1")

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator3/joint/joint/joint"]
transform = Transform3D(0.999922, -0.0108124, 0.00762567, 0.0108176, 0.999941, -0.00094527, -0.00634583, 0.000856401, 1.19998, 0.0124235, -0.0274396, -1.17779)

[node name="leg_animator4" parent="spider_controller" instance=ExtResource("2_js6dq")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.98023e-08, 0.44924, 0.4)
rest_position_path = NodePath("rest_position")
ray_cast_position_path = NodePath("ray_cast_position")
pole_position_path = NodePath("pole_position")
pole_rotation_path = NodePath("pole_rotation")
root_joint_path = NodePath("joint")
step_interval_ms = 500.0
step_clock_offset_ms = 300.0
step_duration_ms = 200.0

[node name="pole_position" type="Marker3D" parent="spider_controller/leg_animator4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 3, 9.53674e-07)

[node name="pole_rotation" type="Marker3D" parent="spider_controller/leg_animator4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 3.5, 2.38419e-07)

[node name="rest_position" type="Marker3D" parent="spider_controller/leg_animator4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.192, 0, 0)

[node name="ray_cast_position" type="Marker3D" parent="spider_controller/leg_animator4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.15659, 0.75843, 0)

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator4"]
transform = Transform3D(0.00739333, 0.0722536, 0.997167, 0.0507115, 0.995911, -0.0725349, -0.997621, 0.0511601, 0.00370284, 0, 0.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="spider_controller/leg_animator4/joint"]
transform = Transform3D(0.999827, -0.0020542, -0.0185014, -0.00467863, 0.934259, -0.356564, 0.0180176, 0.356589, 0.934087, 0.000379562, 0.0128697, -0.584583)
material_override = ExtResource("3_a0k62")
mesh = SubResource("1")

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator4/joint"]
transform = Transform3D(0.981843, -0.0613288, -0.0696519, 0.0440919, 0.964971, -0.22431, 0.0807344, 0.218841, 0.969567, 0.01688, 0.206689, -1.06968)

[node name="MeshInstance3D" type="MeshInstance3D" parent="spider_controller/leg_animator4/joint/joint"]
transform = Transform3D(1, -7.45058e-09, -5.96046e-08, 0, 1, -1.86265e-09, 0, 2.8871e-08, 1, 0, -1.78814e-07, -0.5)
material_override = ExtResource("4_k0k44")
mesh = SubResource("1")

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator4/joint/joint"]
transform = Transform3D(0.998591, -0.0183169, 0.0420804, -0.0424412, -0.0172303, 0.997552, -0.0175862, -0.998501, -0.0179865, 0.000127077, -2.38419e-05, -1.00182)

[node name="MeshInstance2" type="MeshInstance3D" parent="spider_controller/leg_animator4/joint/joint/joint"]
transform = Transform3D(1, -0.000118151, -7.96393e-05, 0.000118166, 1, -3.14424e-05, 7.96542e-05, 3.15653e-05, 1, -4.1008e-05, -1.5676e-05, -0.5)
material_override = ExtResource("3_a0k62")
mesh = SubResource("1")

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator4/joint/joint/joint"]
transform = Transform3D(0.997618, 0.0251758, -0.0147673, -0.025128, 0.999226, 0.00086228, 0.0147579, -0.00048997, 0.999722, -0.000223637, 0.0022471, -1.01065)

[node name="leg_animator5" parent="spider_controller" instance=ExtResource("2_js6dq")]
transform = Transform3D(1, -2.91038e-10, 0, 1.16415e-10, 1, 0, -1.86265e-09, -1.86265e-09, 1, 0, 0.44924, 1.03612)
rest_position_path = NodePath("rest_position")
ray_cast_position_path = NodePath("ray_cast_position")
pole_position_path = NodePath("pole_position")
pole_rotation_path = NodePath("pole_rotation")
root_joint_path = NodePath("joint")
step_interval_ms = 500.0
step_clock_offset_ms = 300.0
step_duration_ms = 200.0

[node name="pole_position" type="Marker3D" parent="spider_controller/leg_animator5"]
transform = Transform3D(1, 3.72529e-09, -1.86265e-09, -3.72529e-09, 1, 0, 0, -1.74623e-10, 1, -2.5, 3, 7.15256e-07)

[node name="pole_rotation" type="Marker3D" parent="spider_controller/leg_animator5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 3.5, 2.38419e-07)

[node name="rest_position" type="Marker3D" parent="spider_controller/leg_animator5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.192, 0, 0)

[node name="ray_cast_position" type="Marker3D" parent="spider_controller/leg_animator5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.15659, 0.75843, 0)

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator5"]
transform = Transform3D(0.00739333, 0.0722536, 0.997167, 0.0507115, 0.995911, -0.0725349, -0.997621, 0.0511601, 0.00370284, 0, 0.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="spider_controller/leg_animator5/joint"]
transform = Transform3D(0.999768, -0.0029909, -0.021316, -0.00600945, 0.912137, -0.409842, 0.0206689, 0.409875, 0.911907, 3.24249e-05, -1.72853e-06, -0.499996)
material_override = ExtResource("3_a0k62")
mesh = SubResource("1")

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator5/joint"]
transform = Transform3D(0.964653, 0.190724, 0.0742351, -0.161867, 0.936184, -0.282676, -0.1233, 0.263141, 0.951881, 0.0162573, 0.228089, -1.00364)

[node name="MeshInstance3D" type="MeshInstance3D" parent="spider_controller/leg_animator5/joint/joint"]
transform = Transform3D(1, -7.45058e-09, -5.96046e-08, 0, 1, -1.86265e-09, 0, 2.8871e-08, 1, 0, -1.78814e-07, -0.5)
material_override = ExtResource("4_k0k44")
mesh = SubResource("1")

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator5/joint/joint"]
transform = Transform3D(0.997527, 0.0501546, -0.0422989, 0.0505622, -0.175583, 0.981821, 0.0419107, -0.981911, -0.177728, -0.000126123, -4.12464e-05, -1.00237)

[node name="MeshInstance2" type="MeshInstance3D" parent="spider_controller/leg_animator5/joint/joint/joint"]
transform = Transform3D(1, -0.000118215, -9.55611e-05, 0.000118215, 1, -3.79132e-05, 7.96318e-05, 3.15518e-05, 1.2, 0.0122542, -0.0291796, -0.666716)
material_override = ExtResource("3_a0k62")
mesh = SubResource("1")

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator5/joint/joint/joint"]
transform = Transform3D(0.999922, -0.0108124, 0.00762567, 0.0108176, 0.999941, -0.00094527, -0.00634583, 0.000856401, 1.19998, 0.0124235, -0.0274396, -1.17779)

[node name="leg_animator6" parent="spider_controller" instance=ExtResource("2_js6dq")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.44924, 1.03612)
rest_position_path = NodePath("rest_position")
ray_cast_position_path = NodePath("ray_cast_position")
pole_position_path = NodePath("pole_position")
pole_rotation_path = NodePath("pole_rotation")
root_joint_path = NodePath("joint")
step_interval_ms = 500.0
step_clock_offset_ms = 0.0
step_duration_ms = 200.0

[node name="pole_position" type="Marker3D" parent="spider_controller/leg_animator6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 3, 9.53674e-07)

[node name="pole_rotation" type="Marker3D" parent="spider_controller/leg_animator6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 3.5, 2.38419e-07)

[node name="rest_position" type="Marker3D" parent="spider_controller/leg_animator6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.192, 0, 0)

[node name="ray_cast_position" type="Marker3D" parent="spider_controller/leg_animator6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.15659, 0.75843, 0)

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator6"]
transform = Transform3D(0.00739333, 0.0722536, 0.997167, 0.0507115, 0.995911, -0.0725349, -0.997621, 0.0511601, 0.00370284, 0, 0.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="spider_controller/leg_animator6/joint"]
transform = Transform3D(0.999827, -0.0020542, -0.0185014, -0.00467863, 0.934259, -0.356564, 0.0180176, 0.356589, 0.934087, 0.000379562, 0.0128697, -0.584583)
material_override = ExtResource("3_a0k62")
mesh = SubResource("1")

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator6/joint"]
transform = Transform3D(0.981843, -0.0613288, -0.0696519, 0.0440919, 0.964971, -0.22431, 0.0807344, 0.218841, 0.969567, 0.01688, 0.206689, -1.06968)

[node name="MeshInstance3D" type="MeshInstance3D" parent="spider_controller/leg_animator6/joint/joint"]
transform = Transform3D(1, -7.45058e-09, -5.96046e-08, 0, 1, -1.86265e-09, 0, 2.8871e-08, 1, 0, -1.78814e-07, -0.5)
material_override = ExtResource("4_k0k44")
mesh = SubResource("1")

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator6/joint/joint"]
transform = Transform3D(0.998591, -0.0183169, 0.0420804, -0.0424412, -0.0172303, 0.997552, -0.0175862, -0.998501, -0.0179865, 0.000127077, -2.38419e-05, -1.00182)

[node name="MeshInstance2" type="MeshInstance3D" parent="spider_controller/leg_animator6/joint/joint/joint"]
transform = Transform3D(1, -0.000118151, -7.96393e-05, 0.000118166, 1, -3.14424e-05, 7.96542e-05, 3.15653e-05, 1, -4.1008e-05, -1.5676e-05, -0.5)
material_override = ExtResource("3_a0k62")
mesh = SubResource("1")

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator6/joint/joint/joint"]
transform = Transform3D(0.997618, 0.0251758, -0.0147673, -0.025128, 0.999226, 0.00086228, 0.0147579, -0.00048997, 0.999722, -0.000223637, 0.0022471, -1.01065)

[node name="leg_animator7" parent="spider_controller" instance=ExtResource("2_js6dq")]
transform = Transform3D(1, -2.91038e-10, 0, 1.16415e-10, 1, 0, -1.86265e-09, -1.86265e-09, 1, 0, 0.44924, 1.68664)
rest_position_path = NodePath("rest_position")
ray_cast_position_path = NodePath("ray_cast_position")
pole_position_path = NodePath("pole_position")
pole_rotation_path = NodePath("pole_rotation")
root_joint_path = NodePath("joint")
step_interval_ms = 500.0
step_clock_offset_ms = 0.0
step_duration_ms = 200.0

[node name="pole_position" type="Marker3D" parent="spider_controller/leg_animator7"]
transform = Transform3D(1, 3.72529e-09, -1.86265e-09, -3.72529e-09, 1, 0, 0, -1.74623e-10, 1, -2.5, 3, 7.15256e-07)

[node name="pole_rotation" type="Marker3D" parent="spider_controller/leg_animator7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 3.5, 2.38419e-07)

[node name="rest_position" type="Marker3D" parent="spider_controller/leg_animator7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.192, 0, 0)

[node name="ray_cast_position" type="Marker3D" parent="spider_controller/leg_animator7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.15659, 0.75843, 0)

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator7"]
transform = Transform3D(0.00739333, 0.0722536, 0.997167, 0.0507115, 0.995911, -0.0725349, -0.997621, 0.0511601, 0.00370284, 0, 0.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="spider_controller/leg_animator7/joint"]
transform = Transform3D(0.999768, -0.0029909, -0.021316, -0.00600945, 0.912137, -0.409842, 0.0206689, 0.409875, 0.911907, 3.24249e-05, -1.72853e-06, -0.499996)
material_override = ExtResource("3_a0k62")
mesh = SubResource("1")

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator7/joint"]
transform = Transform3D(0.964653, 0.190724, 0.0742351, -0.161867, 0.936184, -0.282676, -0.1233, 0.263141, 0.951881, 0.0162573, 0.228089, -1.00364)

[node name="MeshInstance3D" type="MeshInstance3D" parent="spider_controller/leg_animator7/joint/joint"]
transform = Transform3D(1, -7.45058e-09, -5.96046e-08, 0, 1, -1.86265e-09, 0, 2.8871e-08, 1, 0, -1.78814e-07, -0.5)
material_override = ExtResource("4_k0k44")
mesh = SubResource("1")

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator7/joint/joint"]
transform = Transform3D(0.997527, 0.0501546, -0.0422989, 0.0505622, -0.175583, 0.981821, 0.0419107, -0.981911, -0.177728, -0.000126123, -4.12464e-05, -1.00237)

[node name="MeshInstance2" type="MeshInstance3D" parent="spider_controller/leg_animator7/joint/joint/joint"]
transform = Transform3D(1, -0.000118215, -9.55611e-05, 0.000118215, 1, -3.79132e-05, 7.96318e-05, 3.15518e-05, 1.2, 0.0122542, -0.0291796, -0.666716)
material_override = ExtResource("3_a0k62")
mesh = SubResource("1")

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator7/joint/joint/joint"]
transform = Transform3D(0.999922, -0.0108124, 0.00762567, 0.0108176, 0.999941, -0.00094527, -0.00634583, 0.000856401, 1.19998, 0.0124235, -0.0274396, -1.17779)

[node name="leg_animator8" parent="spider_controller" instance=ExtResource("2_js6dq")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.44924, 1.68664)
rest_position_path = NodePath("rest_position")
ray_cast_position_path = NodePath("ray_cast_position")
pole_position_path = NodePath("pole_position")
pole_rotation_path = NodePath("pole_rotation")
root_joint_path = NodePath("joint")
step_interval_ms = 500.0
step_clock_offset_ms = 300.0
step_duration_ms = 200.0

[node name="pole_position" type="Marker3D" parent="spider_controller/leg_animator8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 3, 9.53674e-07)

[node name="pole_rotation" type="Marker3D" parent="spider_controller/leg_animator8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 3.5, 2.38419e-07)

[node name="rest_position" type="Marker3D" parent="spider_controller/leg_animator8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.192, 0, 0)

[node name="ray_cast_position" type="Marker3D" parent="spider_controller/leg_animator8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.15659, 0.75843, 0)

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator8"]
transform = Transform3D(0.00739333, 0.0722536, 0.997167, 0.0507115, 0.995911, -0.0725349, -0.997621, 0.0511601, 0.00370284, 0, 0.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="spider_controller/leg_animator8/joint"]
transform = Transform3D(0.999827, -0.0020542, -0.0185014, -0.00467863, 0.934259, -0.356564, 0.0180176, 0.356589, 0.934087, 0.000379562, 0.0128697, -0.584583)
material_override = ExtResource("3_a0k62")
mesh = SubResource("1")

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator8/joint"]
transform = Transform3D(0.981843, -0.0613288, -0.0696519, 0.0440919, 0.964971, -0.22431, 0.0807344, 0.218841, 0.969567, 0.01688, 0.206689, -1.06968)

[node name="MeshInstance3D" type="MeshInstance3D" parent="spider_controller/leg_animator8/joint/joint"]
transform = Transform3D(1, -7.45058e-09, -5.96046e-08, 0, 1, -1.86265e-09, 0, 2.8871e-08, 1, 0, -1.78814e-07, -0.5)
material_override = ExtResource("4_k0k44")
mesh = SubResource("1")

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator8/joint/joint"]
transform = Transform3D(0.998591, -0.0183169, 0.0420804, -0.0424412, -0.0172303, 0.997552, -0.0175862, -0.998501, -0.0179865, 0.000127077, -2.38419e-05, -1.00182)

[node name="MeshInstance2" type="MeshInstance3D" parent="spider_controller/leg_animator8/joint/joint/joint"]
transform = Transform3D(1, -0.000118151, -7.96393e-05, 0.000118166, 1, -3.14424e-05, 7.96542e-05, 3.15653e-05, 1, -4.1008e-05, -1.5676e-05, -0.5)
material_override = ExtResource("3_a0k62")
mesh = SubResource("1")

[node name="joint" type="BoneAttachment3D" parent="spider_controller/leg_animator8/joint/joint/joint"]
transform = Transform3D(0.997618, 0.0251758, -0.0147673, -0.025128, 0.999226, 0.00086228, 0.0147579, -0.00048997, 0.999722, -0.000223637, 0.0022471, -1.01065)

[node name="body" type="MeshInstance3D" parent="spider_controller"]
transform = Transform3D(0.8, 0, 0, -4.65661e-10, 0.4, 0, -1.86265e-09, 0, 2.48953, 0, 0.872493, 0.767876)
material_override = ExtResource("4_k0k44")
mesh = SubResource("2")

[node name="eye1" type="MeshInstance3D" parent="spider_controller"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -0.26625, 0.872493, -0.618)
mesh = SubResource("3")

[node name="eye2" type="MeshInstance3D" parent="spider_controller"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0.294625, 0.872493, -0.618)
mesh = SubResource("3")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
debug_path_custom_color = Color(1, 0, 1, 1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(3.79576, 0, 0, 0, 0.410993, 0, 0, 0, 3.34122, 0.328243, 0.303892, 0.264496)
shape = SubResource("BoxShape3D_4gd7k")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(0.868625, 0, 0, 0, 0.868625, 0, 0, 0, 0.868625, 0.261885, 0.29645, 0.239828)

[node name="AttackRangeCollision" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(5.62967, 0, 0, 0, 1.30067, -2.94159e-21, 0, 6.28797e-20, 3.8942, 0, 0, 0)
shape = SubResource("BoxShape3D_iacao")

[node name="HealthBar" parent="." instance=ExtResource("5_1plew")]
transform = Transform3D(0.022, 0, 0, 0, 0.013, -9.34994e-21, 0, 2.96462e-21, 0.041, 0.296461, 1.49827, 0.0781841)
billboard = 1

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
